{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 27,
  "lineage": "b87f4058-e0ab-559f-7ba0-073b2a2d40f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562904761104:internet-gateway/igw-06905d7e3d15081eb",
            "id": "igw-06905d7e3d15081eb",
            "owner_id": "562904761104",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-fargate-demo-igw"
            },
            "tags_all": {
              "Name": "ecs-fargate-demo-igw"
            },
            "vpc_id": "vpc-04cf2722ada929a77"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562904761104",
            "id": "igw-06905d7e3d15081eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:562904761104:loadbalancer/app/ecs-fargate-demo-alb/ccaec54218cbd17c",
            "arn_suffix": "app/ecs-fargate-demo-alb/ccaec54218cbd17c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-fargate-demo-alb-1897386773.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:562904761104:loadbalancer/app/ecs-fargate-demo-alb/ccaec54218cbd17c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-fargate-demo-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-08d4c0222f0cc0c91"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c3815e9c6551375"
              },
              {
                "subnet_id": "subnet-06be69c8c67a3a7cc"
              }
            ],
            "subnets": [
              "subnet-02c3815e9c6551375",
              "subnet-06be69c8c67a3a7cc"
            ],
            "tags": {
              "Name": "ecs-fargate-demo-alb"
            },
            "tags_all": {
              "Name": "ecs-fargate-demo-alb"
            },
            "vpc_id": "vpc-04cf2722ada929a77",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:562904761104:loadbalancer/app/ecs-fargate-demo-alb/ccaec54218cbd17c"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:562904761104:listener/app/ecs-fargate-demo-alb/ccaec54218cbd17c/0617f10650fa50d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:562904761104:targetgroup/ecs-fargate-demo-tg/61dffbf4e094f602",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:562904761104:listener/app/ecs-fargate-demo-alb/ccaec54218cbd17c/0617f10650fa50d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:562904761104:loadbalancer/app/ecs-fargate-demo-alb/ccaec54218cbd17c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:562904761104:listener/app/ecs-fargate-demo-alb/ccaec54218cbd17c/0617f10650fa50d9"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.ecs",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:562904761104:targetgroup/ecs-fargate-demo-tg/61dffbf4e094f602",
            "arn_suffix": "targetgroup/ecs-fargate-demo-tg/61dffbf4e094f602",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:562904761104:targetgroup/ecs-fargate-demo-tg/61dffbf4e094f602",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:562904761104:loadbalancer/app/ecs-fargate-demo-alb/ccaec54218cbd17c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-fargate-demo-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecs-fargate-demo-tg"
            },
            "tags_all": {
              "Name": "ecs-fargate-demo-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04cf2722ada929a77"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:562904761104:targetgroup/ecs-fargate-demo-tg/61dffbf4e094f602"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562904761104:route-table/rtb-0af965869daad8ca9",
            "id": "rtb-0af965869daad8ca9",
            "owner_id": "562904761104",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "ecs-fargate-demo-private-route-table"
            },
            "tags_all": {
              "Name": "ecs-fargate-demo-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cf2722ada929a77"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562904761104",
            "id": "rtb-0af965869daad8ca9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562904761104:route-table/rtb-07ad0eca52948ecf9",
            "id": "rtb-07ad0eca52948ecf9",
            "owner_id": "562904761104",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06905d7e3d15081eb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-fargate-demo-public-route-table"
            },
            "tags_all": {
              "Name": "ecs-fargate-demo-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cf2722ada929a77"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562904761104",
            "id": "rtb-07ad0eca52948ecf9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebad810c41a3f0a3",
            "region": "us-east-1",
            "route_table_id": "rtb-0af965869daad8ca9",
            "subnet_id": "subnet-00f518dd295e7b48e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562904761104",
            "id": "rtbassoc-0ebad810c41a3f0a3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5af1b37fee3c0bc",
            "region": "us-east-1",
            "route_table_id": "rtb-0af965869daad8ca9",
            "subnet_id": "subnet-0b30a3cfdd05863fc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562904761104",
            "id": "rtbassoc-0d5af1b37fee3c0bc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0521b71867fa2bd56",
            "region": "us-east-1",
            "route_table_id": "rtb-07ad0eca52948ecf9",
            "subnet_id": "subnet-06be69c8c67a3a7cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562904761104",
            "id": "rtbassoc-0521b71867fa2bd56",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d32c9ddf8b2f706f",
            "region": "us-east-1",
            "route_table_id": "rtb-07ad0eca52948ecf9",
            "subnet_id": "subnet-02c3815e9c6551375"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562904761104",
            "id": "rtbassoc-0d32c9ddf8b2f706f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562904761104:security-group/sg-08d4c0222f0cc0c91",
            "description": "Allow HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d4c0222f0cc0c91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-fargate-demo-alb-sg",
            "name_prefix": "",
            "owner_id": "562904761104",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-fargate-demo-alb-sg"
            },
            "tags_all": {
              "Name": "ecs-fargate-demo-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cf2722ada929a77"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562904761104",
            "id": "sg-08d4c0222f0cc0c91",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562904761104:security-group/sg-097d1226ee4e59d26",
            "description": "Allow traffic from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097d1226ee4e59d26",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Traffic from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08d4c0222f0cc0c91"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-fargate-demo-ecs-sg",
            "name_prefix": "",
            "owner_id": "562904761104",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-fargate-demo-ecs-sg"
            },
            "tags_all": {
              "Name": "ecs-fargate-demo-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04cf2722ada929a77"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562904761104",
            "id": "sg-097d1226ee4e59d26",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562904761104:subnet/subnet-00f518dd295e7b48e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f518dd295e7b48e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562904761104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-fargate-demo-private-subnet"
            },
            "tags_all": {
              "Name": "ecs-fargate-demo-private-subnet"
            },
            "vpc_id": "vpc-04cf2722ada929a77"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562904761104",
            "id": "subnet-00f518dd295e7b48e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562904761104:subnet/subnet-0b30a3cfdd05863fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b30a3cfdd05863fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "562904761104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-fargate-demo-private-subnet-2"
            },
            "tags_all": {
              "Name": "ecs-fargate-demo-private-subnet-2"
            },
            "vpc_id": "vpc-04cf2722ada929a77"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562904761104",
            "id": "subnet-0b30a3cfdd05863fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562904761104:subnet/subnet-06be69c8c67a3a7cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06be69c8c67a3a7cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "562904761104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-fargate-demo-public-subnet"
            },
            "tags_all": {
              "Name": "ecs-fargate-demo-public-subnet"
            },
            "vpc_id": "vpc-04cf2722ada929a77"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562904761104",
            "id": "subnet-06be69c8c67a3a7cc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562904761104:subnet/subnet-02c3815e9c6551375",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c3815e9c6551375",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "562904761104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-fargate-demo-public-subnet-2"
            },
            "tags_all": {
              "Name": "ecs-fargate-demo-public-subnet-2"
            },
            "vpc_id": "vpc-04cf2722ada929a77"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562904761104",
            "id": "subnet-02c3815e9c6551375",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:562904761104:vpc/vpc-04cf2722ada929a77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b57f4fe17023034b",
            "default_route_table_id": "rtb-0ae504311cb6a4607",
            "default_security_group_id": "sg-05d19ac873f491357",
            "dhcp_options_id": "dopt-0b892f513dceec745",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04cf2722ada929a77",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae504311cb6a4607",
            "owner_id": "562904761104",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-fargate-demo-vpc"
            },
            "tags_all": {
              "Name": "ecs-fargate-demo-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "562904761104",
            "id": "vpc-04cf2722ada929a77",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}